# Standaml

./: .gitignore  Dockerfile  LICENSE  README-en.md  README.md  colour.default.conf  standaml.default.conf
.devcontainer/: Dockerfile.dev-container  devcontainer.json
.github/workflows/: docker-image.yml
src/: .ocamlformat  Makefile  dune-project  encryptaml.opam  standaml.opam
src/lib/: api.ml  api.mli  config.ml  config.mli  dune  route.ml  route.mli  standing.ml  standing.mli
src/lib/config/: colour.ml  token.ml
src/lib/model/: standing.ml  standing.mli  standing_line.ml  standing_line.mli
src/lib/test/: config_spec.ml  matrix_spec.ml  route_spec.ml  tuple_spec.ml
src/lib/tui/: colour.ml  matrix.ml  matrix.mli  standing.ml  standing.mli  standing_format.ml  standing_format.mli
src/lib/utils/: api.ml  api.mli  config.mli  tuple.ml  tuple.mli
src/test/: dune
