(lang dune 3.11)

(name encryptaml)

(generate_opam_files true)

(source
 (github TheLusitanianKing/Encryptaml))

(authors "Alexandre GOMES")

(license ../LICENSE)

(package
 (name encryptaml)
 (synopsis "Encryption algorithms in OCaml")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
